# alpasim

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  pyproject.toml  setup_local_env.sh
.github/scripts/: changed-files.sh
.github/workflows/: lint.yml  pre.yml  test.yml
src/controller/: pyproject.toml
src/controller/alpasim_controller/: mpc_controller.py  system.py  vehicle_model.py
src/controller/alpasim_controller/mpc_impl/: linear_mpc.py  nonlinear_mpc.py
src/controller/tests/: test_vehicle_model.py
src/controller/tests/mpc_impl/: test_linear_mpc.py  test_nonlinear_mpc.py
src/driver/: pyproject.toml
src/driver/src/alpasim_driver/: main.py
src/driver/src/alpasim_driver/models/: __init__.py  ar1_model.py  base.py  manual_model.py  transfuser_model.py  vam_model.py
src/driver/src/alpasim_driver/tests/: test_ar1_ego_history.py  test_service_flow.py  test_transfuser_batched.py  test_vam_batched.py
src/eval/: pyproject.toml
src/eval/src/eval/: accumulator.py  data.py  video.py
src/eval/src/eval/scorers/: minADE.py  offroad.py  plan_deviation.py
src/eval/tests/: test_data.py  test_scenario_evaluator.py
src/grpc/: pyproject.toml
src/physics/: pyproject.toml
src/physics/alpasim_physics/: backend.py  ply_io.py
src/physics/tests/: test_backend.py  test_ply_io.py  test_utils.py
src/runtime/: pyproject.toml
src/runtime/alpasim_runtime/: camera_catalog.py  loop.py  noise_models.py  route_generator.py  types.py
src/runtime/alpasim_runtime/daemon/: request_store.py  scheduler.py
src/runtime/alpasim_runtime/services/: controller_service.py  driver_service.py  physics_service.py  sensorsim_service.py  traffic_service.py
src/runtime/tests/: test_camera_catalog.py  test_daemon_request_store.py  test_loop.py  test_route_generator.py  test_types.py  test_with_mocks.py
src/runtime/tests/services/: test_controller_api.py
src/tools/: pyproject.toml
src/tools/map_utils/: plot_map.py
src/tools/run-on-slurm/: resume_slurm_job.sh  submit.sh
src/utils/: README.md  pyproject.toml
src/utils/alpasim_utils/: geometry.py  logs.py  scenario.py
src/utils/tests/: test_polyline.py  test_trajectory.py  test_utils_rs.py
src/utils_rs/: Cargo.toml  README.md  pyproject.toml  utils_rs.pyi
src/utils_rs/src/: array_utils.rs  lib.rs  polyline.rs  pose.rs  trajectory.rs
src/wizard/alpasim_wizard/: utils.py
src/wizard/alpasim_wizard/deployment/: docker_compose.py  slurm.py
src/wizard/configs/deploy/: local_oss_arm.yaml
