[project]
name = "alpasim_workspace"
version = "0.31.0"
description = "Workspace for Alpamayo Sim development"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
]

[tool.uv.workspace]
members = [
  "src/controller",
  "src/eval",
  "src/grpc",
  "src/runtime",
  "src/utils",
  "src/utils_rs",
  "src/physics",
  "src/tools",
  "src/driver",
]

# This is a hacky workaround to skip installing certain packages.
[tool.uv]
override-dependencies = [
  # flash attention is an AR1 dependency but does not declare its own dependencies
  # properly, leading to uv install errors.
  # TODO: make flash attention optional in alpamayo-r1 repo.
  "flash-attn; python_version < '0'",
  # hyperqueue is a vam dependency for HPC job scheduling, only available on Linux x86_64.
  # Not needed for local driver runs.
  "hyperqueue; python_version < '0'",
]
constraint-dependencies = [
  # setuptools 82+ removed pkg_resources, which grpcio-tools 1.62.3 still needs.
  # Remove this constraint when grpcio-tools and protobuf are upgraded to 5.x+.
  "setuptools<82",
]
